SFDCProject/src/objects/InContact_Lead_Management__c.object
<CustomObject>
    <fields>
        <fullName>Call_Center__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Caller_ID__c</fullName>
        <label>Caller ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Call_Attempts_c__c</fullName>
        <label>Campaign Call Attempts</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dail_Status__c</fullName>
        <label>Dail Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Stage__c</fullName>
        <label>To Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Status__c</fullName>
        <label>To Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_API__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voicemail__c</fullName>
        <label>Voicemail</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wait__c</fullName>
        <label>Wait</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>InContact Lead Management</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ICN-{0000}</displayFormat>
        <label>InContact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InContact Lead Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>